# sudoku

./: Cargo.toml  README.md  index.html  style.css  sudoku.js
src/: lib.rs  main.rs  sodoku.rs  sudoku.rs
src/sudoku/: mod.rs  solver.rs  util.rs
src/sudoku2/: mod.rs
