[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.37"
enumset = "1.0.11"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
